Profile View Page (#26)
* Implement Profile View Page

Partially Resolves Issue #18.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <!-- Strings for FB Sign In -->
     <string name="facebook_app_id">141216909758045</string>
     <string name="fb_login_protocol_scheme">fb141216909758045</string>
-    <string name="title_activity_main">Schedule</string>
+    <string name="title_activity_main">MainActivity</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -41,4 +41,9 @@
     <string name="speaker_name">Marc Benioff</string>
     <string name="speaker_position">Chairman and CEO, Salesforce</string>
     <string name="share">Share</string>
+    <string name="connected">Connected Accounts</string>
+
+    <!-- Strings related to fragment titles -->
+    <string name="schedule_title">Schedule</string>
+    <string name="profile_title">My Profile</string>
 </resources>
