--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,11 +33,14 @@
     <string name="facebook_app_id">141216909758045</string>
     <string name="fb_login_protocol_scheme">fb141216909758045</string>
     <string name="title_activity_main">MainActivity</string>
-
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-
     <string name="action_settings">Settings</string>
+    <string name="sign_in_with_facebook">Sign in with Facebook</string>
+    <string name="logout">Logout</string>
+    
+    <!--Strings for Google Sign In-->
+    <string name="sign_in_with_google">Sign in with Google</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="title_activity_event_detail">Event Details</string>
